# de-bootcamp-summer2026

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.md.orig  README.md.rej  REVIEW_REPORT.md  SETUP_COMMANDS.md  __init__.py  airflow.cfg  antigravity_status.md  docker-compose.yml  fix_airflow.patch  fix_airflow.py  generate_etl_dag.py  patch_readme.patch  patch_readme.py  pyproject.toml  rewrite_etl_prices_dag.patch  ruff.toml  run_tests.py  test_benchmark.py  test_duckdb.py  test_imports.py  test_scrape.py  update_docs.patch
.Jules/: palette.md
airflow/: README.md  __init__.py
airflow/dags/: databricks_ingest_dag.py  etl_prices_dag.py  etl_prices_dag.py.orig  example_placeholder_dag.py  resolve_index_membership_dag.py
app/: __init__.py  auth.py  config.py  main.py
app/core/: indices.py
app/db/: __init__.py  connection.py  registry.py  registry.py.orig  snowflake_connector.py  utils.py
app/views/: 01_Home_Dashboard.py  02_Stock_Overview.py  03_Data_Explorer.py  04_Indicators.py  05_Analysis.py  06_Assistant_Chat.py  99_Admin.py  __init__.py  page_01_home_dashboard.py  page_02_stock_overview.py  page_03_data_explorer.py  page_04_indicators.py  page_05_analysis.py  page_06_assistant_chat.py  page_07_ticker_registry.py  page_99_admin.py
config/: symbols.toml
data/: ticker_registry_seed.csv
databricks/: README.md
databricks/jobs/: daily_ingest_job.json
databricks/notebooks/: 01_ingest_yfinance.py  02_delta_bronze_silver.py  (+1 more)
dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml
docker/: Dockerfile.airflow  airflow-requirements.txt  airflow.env  init-postgres.sql
docs/: PHASE_10_REGISTRY.md  PHASE_1_STREAMLIT.md  PHASE_2_AIRFLOW_POSTGRES.md  PHASE_2_DOCKER_AIRFLOW_SETUP.md  PHASE_3_DBT.md  PHASE_4_ANALYTICS.md  PHASE_5_LLM_RAG.md  PHASE_6_REDIS.md  PHASE_7_SNOWFLAKE.md  PHASE_8_DATABRICKS.md  PHASE_9_TERRAFORM.md  PROJECT_STATUS.md  STEP_BY_STEP_LEARNING_GUIDE.md
scripts/: init_db.py  init_ollama.sh  pg_loader.py  refresh_data.py  schedule_pg_sync.py  seed_registry.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_db.py  test_etl.py  test_registry.py  test_seed_registry.py  test_smoke.py
(+19 files in other folders)
